--- a/SouDizimista.WebApp/SouDizimista.WebApp.csproj
+++ b/SouDizimista.WebApp/SouDizimista.WebApp.csproj
@@ -18,11 +18,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Identity.Web.UI" Version="2.0.7-preview" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SouDizimista.Domain\SouDizimista.Domain.csproj" />
     <ProjectReference Include="..\SouDizimista.Repository\SouDizimista.Repository.csproj" />
+    <ProjectReference Include="..\SouDizimista.Services\SouDizimista.Services.csproj" />
   </ItemGroup>
 
 </Project>
