--- a/SouDizimista.WebApp/appsettings.json
+++ b/SouDizimista.WebApp/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Base": "server = GMS\\SQLEXPRESS;database=GmsDizimo;integrated security=sspi;"
+    "Base": "server = LEONARDO\\SQLEXPRESS;database=GmsDizimo;integrated security=sspi;"
   }
 }
