--- a/SouDizimista.WebApp/SouDizimista.WebApp.csproj
+++ b/SouDizimista.WebApp/SouDizimista.WebApp.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="Views\Shared\_Layout.cshtml">
+    <Content Update="Views\Shared\_LayoutMetronic.cshtml">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
