--- a/SouDizimista.WebApp/SouDizimista.WebApp.csproj
+++ b/SouDizimista.WebApp/SouDizimista.WebApp.csproj
@@ -24,7 +24,106 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SouDizimista.Domain\SouDizimista.Domain.csproj" />
+    <ProjectReference Include="..\SouDizimista.Repository\SouDizimista.Repository.csproj" />
     <ProjectReference Include="..\SouDizimista.Services\SouDizimista.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="dist\assets\media\bg\" />
+    <Folder Include="dist\assets\media\books\" />
+    <Folder Include="dist\assets\media\demos\" />
+    <Folder Include="dist\assets\media\error\" />
+    <Folder Include="dist\assets\media\logos\" />
+    <Folder Include="dist\assets\media\misc\" />
+    <Folder Include="dist\assets\media\plugins\jstree\" />
+    <Folder Include="dist\assets\media\products\" />
+    <Folder Include="dist\assets\media\project-logos\" />
+    <Folder Include="dist\assets\media\stock-600x400\" />
+    <Folder Include="dist\assets\media\stock-600x600\" />
+    <Folder Include="dist\assets\media\stock-900x600\" />
+    <Folder Include="dist\assets\media\svg\avatars\" />
+    <Folder Include="dist\assets\media\svg\files\" />
+    <Folder Include="dist\assets\media\svg\flags\" />
+    <Folder Include="dist\assets\media\svg\humans\" />
+    <Folder Include="dist\assets\media\svg\icons\Clothes\" />
+    <Folder Include="dist\assets\media\svg\icons\Code\" />
+    <Folder Include="dist\assets\media\svg\icons\Communication\" />
+    <Folder Include="dist\assets\media\svg\icons\Cooking\" />
+    <Folder Include="dist\assets\media\svg\icons\Design\" />
+    <Folder Include="dist\assets\media\svg\icons\Devices\" />
+    <Folder Include="dist\assets\media\svg\icons\Electric\" />
+    <Folder Include="dist\assets\media\svg\icons\Files\" />
+    <Folder Include="dist\assets\media\svg\icons\Food\" />
+    <Folder Include="dist\assets\media\svg\icons\General\" />
+    <Folder Include="dist\assets\media\svg\icons\Home\" />
+    <Folder Include="dist\assets\media\svg\icons\Layout\" />
+    <Folder Include="dist\assets\media\svg\icons\Map\" />
+    <Folder Include="dist\assets\media\svg\icons\Media\" />
+    <Folder Include="dist\assets\media\svg\icons\Navigation\Stockholm-icons\Navigation\" />
+    <Folder Include="dist\assets\media\svg\icons\Shopping\" />
+    <Folder Include="dist\assets\media\svg\icons\Text\" />
+    <Folder Include="dist\assets\media\svg\icons\Tools\" />
+    <Folder Include="dist\assets\media\svg\icons\Weather\" />
+    <Folder Include="dist\assets\media\svg\illustrations\" />
+    <Folder Include="dist\assets\media\svg\logos\" />
+    <Folder Include="dist\assets\media\svg\misc\" />
+    <Folder Include="dist\assets\media\svg\patterns\" />
+    <Folder Include="dist\assets\media\svg\shapes\" />
+    <Folder Include="dist\assets\media\svg\social-icons\" />
+    <Folder Include="dist\assets\media\users\" />
+    <Folder Include="dist\assets\plugins\custom\tinymce\skins\content\writer\" />
+    <Folder Include="dist\assets\plugins\custom\tinymce\skins\ui\oxide-dark\" />
+    <Folder Include="dist\assets\plugins\global\fonts\%40fortawesome\" />
+    <Folder Include="dist\assets\plugins\global\fonts\flaticon2\" />
+    <Folder Include="dist\assets\plugins\global\fonts\flaticon\" />
+    <Folder Include="dist\assets\plugins\global\fonts\keenthemes-icons\" />
+    <Folder Include="dist\assets\plugins\global\fonts\line-awesome\" />
+    <Folder Include="dist\assets\plugins\global\fonts\socicon\" />
+    <Folder Include="dist\assets\plugins\global\fonts\summernote\" />
+    <Folder Include="dist\crud\datatables\advanced\" />
+    <Folder Include="dist\crud\datatables\basic\" />
+    <Folder Include="dist\crud\datatables\data-sources\" />
+    <Folder Include="dist\crud\datatables\extensions\" />
+    <Folder Include="dist\crud\datatables\search-options\" />
+    <Folder Include="dist\crud\file-upload\" />
+    <Folder Include="dist\crud\forms\controls\" />
+    <Folder Include="dist\crud\forms\editors\" />
+    <Folder Include="dist\crud\forms\layouts\" />
+    <Folder Include="dist\crud\forms\validation\" />
+    <Folder Include="dist\crud\forms\widgets\" />
+    <Folder Include="dist\crud\ktdatatable\advanced\" />
+    <Folder Include="dist\crud\ktdatatable\api\" />
+    <Folder Include="dist\crud\ktdatatable\base\" />
+    <Folder Include="dist\crud\ktdatatable\child\" />
+    <Folder Include="dist\custom\apps\chat\" />
+    <Folder Include="dist\custom\apps\contacts\" />
+    <Folder Include="dist\custom\apps\education\class\" />
+    <Folder Include="dist\custom\apps\education\school\" />
+    <Folder Include="dist\custom\apps\education\student\" />
+    <Folder Include="dist\custom\apps\profile\profile-1\" />
+    <Folder Include="dist\custom\apps\projects\" />
+    <Folder Include="dist\custom\apps\support-center\" />
+    <Folder Include="dist\custom\apps\todo\" />
+    <Folder Include="dist\custom\apps\user\" />
+    <Folder Include="dist\custom\pages\error\" />
+    <Folder Include="dist\custom\pages\invoices\" />
+    <Folder Include="dist\custom\pages\login\classic\" />
+    <Folder Include="dist\custom\pages\login\login-3\" />
+    <Folder Include="dist\custom\pages\login\login-4\" />
+    <Folder Include="dist\custom\pages\pricing\" />
+    <Folder Include="dist\custom\pages\wizard\" />
+    <Folder Include="dist\features\bootstrap\" />
+    <Folder Include="dist\features\calendar\" />
+    <Folder Include="dist\features\cards\" />
+    <Folder Include="dist\features\charts\amcharts\" />
+    <Folder Include="dist\features\custom\" />
+    <Folder Include="dist\features\icons\" />
+    <Folder Include="dist\features\maps\" />
+    <Folder Include="dist\features\miscellaneous\" />
+    <Folder Include="dist\features\widgets\" />
+    <Folder Include="dist\layout\general\" />
+    <Folder Include="dist\layout\subheader\" />
+    <Folder Include="dist\layout\themes\" />
   </ItemGroup>
 
 </Project>
